<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    >

    <androidx.appcompat.widget.Toolbar
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/toolbar">

        <ImageView
            android:id="@+id/image_button_setting"
            style="@style/go_back_button"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp">
        </ImageView>

        <TextView
            android:textColor="@color/white"
            android:text="@string/user_setting"
            style="@style/t_box">
        </TextView>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_view_address"
                style="@style/in_up_text_one"
                android:text="@string/user_address"></TextView>

            <EditText
                android:id="@+id/edit_text_update_firstname"
                style="@style/address_edit_text"
                android:hint="@string/fname"></EditText>

            <EditText
                android:id="@+id/edit_text_update_lastname"
                style="@style/address_edit_text"
                android:hint="@string/lname"></EditText>

            <EditText
                android:id="@+id/edit_text_update_address"
                style="@style/address_edit_text"
                android:hint="@string/address"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan"></EditText>

            <EditText
                android:id="@+id/edit_text_update_email"
                style="@style/address_edit_text"
                android:hint="@string/email"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan"></EditText>

            <EditText
                android:id="@+id/edit_text_update_mobile"
                style="@style/address_edit_text"
                android:hint="@string/mobile"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan"></EditText>

            <Button
                android:id="@+id/button_save_address"
                style="@style/all_buttons"
                android:text="@string/address_save">
            </Button>

            <Button
                android:id="@+id/button_reset_password"
                style="@style/all_buttons"
                android:text="@string/reset">
            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>