<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        style="@style/toolbar">

        <ImageView
            android:id="@+id/image_button_sign_up"
            style="@style/go_back_button"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp">
        </ImageView>

        <TextView
            android:layout_marginLeft="65dp"
            style="@style/welcome_toolbar">
        </TextView>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edit_text_su_fname"
            android:hint="@string/fname"
            style="@style/signUpStyle">
        </EditText>
        <EditText
            android:id="@+id/edit_text_su_lname"
            android:hint="@string/lname"
            style="@style/signUpStyle">
        </EditText>

        <EditText
            android:id="@+id/edit_text_su_address"
            android:hint="@string/address"
            style="@style/signUpStyle">
        </EditText>

        <EditText
            android:id="@+id/edit_text_su_email"
            android:hint="@string/email"
            style="@style/signUpStyle">
        </EditText>

        <EditText
            android:id="@+id/edit_text_su_mobile"
            android:hint="@string/mobile"
            style="@style/signUpStyle">
        </EditText>

        <EditText
            android:id="@+id/edit_text_su_pass"
            android:hint="@string/password"
            style="@style/signUpStyle">
        </EditText>

        <Button
            android:id="@+id/button_sign_up"
            android:text="@string/sign_up"
            style="@style/signUpStyleButton">
        </Button>

    </LinearLayout>

</LinearLayout>