<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    >

    <androidx.appcompat.widget.Toolbar
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/toolbar">

        <ImageView
            android:id="@+id/image_button_back_reset"
            style="@style/go_back_button"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp">
        </ImageView>

        <TextView
            android:layout_marginLeft="100dp"
            android:textColor="@color/white"
            android:text="@string/reset_pass"
            style="@style/t_box">
        </TextView>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_view_reset_password"
                style="@style/in_up_text_one"
                android:text="@string/reset_password">
            </TextView>



            <EditText
                android:id="@+id/edit_text_reset_pass_mobile"
                style="@style/address_edit_text"
                android:hint="@string/mobile"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan">
            </EditText>

            <EditText
                android:id="@+id/edit_text_reset_pass_one"
                style="@style/address_edit_text"
                android:hint="@string/password"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan"></EditText>

            <EditText
                android:id="@+id/edit_text_reset_pass_two"
                style="@style/address_edit_text"
                android:hint="@string/password"
                android:isScrollContainer="true"
                android:windowSoftInputMode="adjustPan"></EditText>

            <Button
                android:id="@+id/button_reset_pass"
                style="@style/all_buttons"
                android:text="@string/address_save">
            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>