<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/toolbar">

        <TextView
            style="@style/welcome_toolbar">
        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_view_wp_one"
        style="@style/wp_img_one"
        app:srcCompat="@drawable/wp_one" />


    <TextView
        android:id="@+id/welcome_message"
        android:text="@string/welcome_message"
        style="@style/wp_text_one">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_sign_up"
            android:text="@string/sign_up"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:background="@color/bb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Button>

        <Button
            android:id="@+id/button_sign_in"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:background="@color/bb"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Button>

    </LinearLayout>



</LinearLayout>